--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,10 +133,10 @@ message("Project sources are: ${SRCFILES}")
 #target_link_libraries(${PROJECT_NAME}_bin ${LIBIGL_LIBRARIES} ${LIBIGL_EXTRA_LIBRARIES})
 
 add_executable(test_harmonic_bin 
+  curvatureFlow.cpp 
+  Derivatives.cpp
   Helpers.cpp 
   Minimization.cpp
-  curvatureFlow.cpp 
-  decompose_L.cpp
   test_harmonic.cpp 
   ${LIBIGL_EXTRA_SOURCES})
 target_link_libraries(test_harmonic_bin ${ALL_LIBRARIES})
